# makneto

./: AUTHORS  Doxyfile  Makefile  README  README.cz.txt  desky.tex  dialback.eps  jingle-states.dia  jingle.dia  makneto.kdevelop  makneto.kdevelop.filelist  makneto.kdevelop.pcs  makneto.kdevses  obsah.tex  pcm.tex  povidani.txt  show-pdf.sh  spectrum.c  spectrum2.c  xmensi06.bib  xmensi06.tex
cls/: fitthesis.cls
contactlist/: contactlist.eps
gst/: Makefile  oggplayer.c
gst/jingleecho/: CMakeLists.txt  Makefile  audiowatcher.h  avoutput.cpp  avoutputmanager.h  codecs.cpp  conference.cpp  framesize.cpp  jingle-candidate.cpp  jingle-candidate.h  jingle-transport.h  jingleecho.pro  jinglesession.h  mediaconfig.cpp  payloadparameter.cpp  payloadparameter.h  pjid.cpp  session.cpp  stream.cpp  testmediaconfig.h
gst/jingleecho/gloox/: client.cpp  requests.h
gst/jingleecho/irisbot/: CMakeLists.txt  aspectedlayout.cpp  irisbot.cpp  irisjinglemanager.cpp  qtjinglesession.h  videoconferencewindow.h  volumebar.cpp  volumebar.h
ipv6/: Makefile  main.c  v6interface.c  v6interface.h
jingleecho/: CMakeLists.txt  Makefile  audiowatcher.h  avoutput.cpp  avoutput.h  avoutputmanager.cpp  avoutputmanager.h  client.cpp  client.h  codecs.cpp  codecs.h  conference.cpp  conference.h  confexception.cpp  confexception.h  framesize.h  fsjingle.cpp  fsjingle.h  fstjingle.cpp  fstjingle.h  fststatusreader.h  glogger.h  glooxjinglemanager.cpp  gstvideowatcher.cpp  gstvideowatcher.h  jingle-candidate.cpp  jingle-candidate.h  jingle-content.cpp  jingle-content.h  jingle-description.cpp  jingle-description.h  jingle-transport.cpp  jingle-transport.h  jingleecho.pro  jingleerror.h  jinglemanager.cpp  jinglemanager.h  jinglesession.cpp  jinglesession.h  jinglesessiongroup.cpp  (+25 more)
jingleecho/gloox/: client.h  glooxjinglemanager.h  versionhandler.h
jingleecho/irisbot/: CMakeLists.txt  aspectedlayout.h  avparticipantwidget.cpp  avparticipantwidget.h  gstvideowidget.cpp  gstvideowidget.h  incomingdialog.h  irisbot.cpp  irisbot.h  irisbot.pro  irisjinglemanager.cpp  irisjinglemanager.h  jinglevideowindow.cpp  jinglevideowindow.h  qtjinglesession.h  volumebar.cpp
logger/: logger.cpp  logger.h
makneto/: AUTHORS  CMakeLists.txt  Doxyfile  cmake_install.cmake  cmake_uninstall.cmake  makneto.kdevelop  makneto.kdevelop.filelist  makneto.kdevelop.pcs
makneto/src/: CMakeLists.txt  add_contact.ui  addcontactdialog.cpp  addcontactdialog.h  avparticipantcontrol.cpp  avparticipantcontrol.h  callinitwgt.cpp  callinitwgt.h  chatinput.cpp  chatinput.h  chatoutput.cpp  chatoutput.h  cmake_install.cmake  cmake_uninstall.cmake  connection.cpp  connection.h  connectionview.cpp  connectionview.h  contact_detail.ui  contactdetaildialog.cpp  contactdetaildialog.h  discorequest.cpp  discorequest.h  featurehelpers.h  featurelist.cpp  featurelist.h  ftsteam.h  ftstream.cpp  ftstream.h  main.cpp  makneto.cpp  makneto.desktop  makneto.h  makneto.kcfg  makneto.kdevelop  maknetoaccount.h  maknetocontact.cpp  maknetocontact.h  maknetocontactlist.cpp  maknetocontactlist.h  (+54 more)
makneto/src/contactlist/: README  contactlist.cpp  contactlist.h  contactlistcontact.cpp  contactlistcontact.h  contactlistgroupedcontact.cpp  contactlistgroupedcontact.h  contactlistgroupitem.cpp  contactlistgroupitem.h  contactlistitem.cpp  contactlistitem.h  contactlistmodel.cpp  contactlistmodel.h  contactlistview.cpp  contactlistview.h  status.h
makneto/src/gst/jingle/: CMakeLists.txt  Makefile  Makefile.orig  audiofileplayer.cpp  audiowatcher.cpp  audiowatcher.h  avoutput.cpp  avoutput.h  codecs.h  conference.cpp  conference.h  fstjingle.cpp  fstjingle.h  gstvideowatcher.cpp  gstvideowatcher.h  jingle-candidate.cpp  jinglesession.cpp  mediaconfig.cpp  mediaconfig.h  parser.h  pjid.h  qpipeline.cpp  session.cpp  stream.cpp  stream.h  testmediaconfig.cpp
makneto/src/gst/jingle/gloox/: rosterator.cpp
makneto/src/gst/jingle/gui/: avparticipantwidget.cpp  avparticipantwidget.h  gstvideowidget.cpp  gstvideowidget.h  incomingdialog.cpp  irisbot.pro  irisjinglemanager.h  jinglevideowindow.cpp  qtaudioplayer.cpp  selfcontactwidget.cpp  selfcontactwidget.h
makneto/src/gst/jingleecho/: CMakeLists.txt  Doxyfile  Makefile  audiofileplayer.cpp  audiofileplayer.h  audiowatcher.cpp  avoutput.cpp  avoutput.h  conference.h  fstjingle.cpp  fstjingle.h  fststatusreader.h  gstvideowatcher.h  jingle-candidate.h  jingle-description.h  jinglemanager.cpp  jinglesessiongroup.h  mediaconfig.cpp  mediaconfig.h  qpipeline.cpp  qpipeline.h  session.h  stream.h
makneto/src/gst/jingleecho/gloox/: client  glogger.cpp  rosterator.h  versionhandler.cpp
makneto/src/gst/jingleecho/irisbot/: CMakeLists.txt  avparticipantwidget.h  gstpluginlist.cpp  gstpluginlist.h  jinglevideowindow.cpp  jinglevideowindow.h  qtaudioplayer.cpp  qtaudioplayer.h  qtjinglesession.cpp  volumebar.cpp
makneto/src/gst/logger/: Makefile  test.cpp
makneto/src/gst/playground/: test.c
makneto/src/gst/qtplay/: Makefile  aspectedlayout.h  audiowatcher.cpp  audiowatcher.h  bindisplay.cpp  bindisplay.h  cpucounter.h  gstbinmodel.cpp  gstbinmodel.h  gsttest.h  moc_mainwin.cpp  moc_volumebar.cpp  player.cpp  player.h  playerwidgetitem.cpp  qtplay.pro  volumebar.cpp
makneto/src/gst/qtplay/qlist/: Makefile  qlist.pro  qlisttest.cpp
makneto/src/gst/qtspectrum/: QGstElement.h  main.cpp  moc_qspectrumwidget.cpp  qpipeline.cpp  qspectrum.cpp  qspectrum.h  qspectrumwidget.cpp
makneto/src/gst/timestest/: Makefile
makneto/src/icons/svg/: README  draw-circle.svgz  draw-ellipse.svgz  draw-line.svgz
makneto/src/iris/include/: xmpp.h  xmpp_client.h  xmpp_clientstream.h  xmpp_stream.h
makneto/src/iris/libidn/: qint.h
makneto/src/iris/src/xmpp/xmpp-im/: xmpp_tasks.cpp  xmpp_tasks.h  xmpp_vcard.cpp
makneto/src/iris/xmpp-core/: connector.cpp  protocol.cpp  simplesasl.cpp  stream.cpp
makneto/src/iris/xmpp-im/: xmpp_task.cpp
makneto/src/plugins/: plugin.cpp  plugin.h  pollplugin.cpp  pollplugin.h  pollplugincreate.cpp  pollplugincreate.h
media/: input-blocks.dia  output-blocks.dia
nat/: farsight.dia  nat.dia  (+5 more)
(+82 files in other folders)
